Update to Java 1.14 and Gradle 6.5